--- a/templates/register.html
+++ b/templates/register.html
@@ -121,7 +121,8 @@
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
     
     <main class="form-signin w-100 m-auto">
-    <form action="" method="POST">
+    <form action="" method="POST"> 
+        {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal text-center">please sign up</h1>
 
         <div class="form-floating">
