--- a/templates/login.html
+++ b/templates/login.html
@@ -120,25 +120,34 @@
   </head>
    
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
-    
     <main class="form-signin w-100 m-auto">
+
     <form action="" method="POST">
+        {% csrf_token %}
         <h1 class="h3 mb-3 fw-normal text-center">please sign in</h1>
 
         <div class="form-floating">
-        <input type="text" class="form-control" id="floatingInput" placeholder="Username" name="email">
-        <label for="floatingInput">Username</label>
+            <input type="text" class="form-control" id="floatingInput" placeholder="Username" name="username">
+            <label for="floatingInput">Username</label>
         </div>
 
         <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
-        <label for="floatingPassword">Password</label>
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+            <label for="floatingPassword">Password</label>
         </div>
        
-        <button class="btn btn-primary w-100 py-2" type="submit">Login</button>
-        <p class="mt-5 mb-3 text-body-secondary text-center">&copy; 2023</p>
+        <button class="btn btn-primary w-100 py-2 mb-3" type="submit">Login</button>
+        {% if messages %}
+            {% for message in messages %}
+                <div class="">
+                    <button class="text-center btn btn-danger w-100 py-2">{{message}}</button>
+                </div>
+            {% endfor %}
+        {% endif %}    
     </form>
-    </main>
 
+    <p class="mt-5 mb-3 text-body-secondary text-center">&copy; 2023</p>
+
+    </main>
     </body>
 </html>
