--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,10 +6,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Dashboard</a></li>
-        <li class="nav-item"> </li><a class="nav-link" href="/login">Login</a></li>
+        {% if request.user.is_authenticated %}
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Dashboard</a></li>
         <li class="nav-item"> </li><a class="nav-link" href="/logout">Logout</a></li>
+        {% else %}
+        <li class="nav-item"> </li><a class="nav-link" href="/login">Login</a></li>
         <li class="nav-item"> </li><a class="nav-link" href="/register">Sign Up</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
